--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <main>
-        <section class="trending">
+        <section id="trending">
             <h2>Trending Songs</h2>
             <div class="scroll">
                 <section>  
@@ -76,6 +76,7 @@
                         <dl>
                         <dt>Artist</dt>
                         <dd>Black Rhomb</dd>
+                        </dl>
                     </div>
                     <img src="../images/smoothies-cover.png" alt="smoothies">
                     <audio controls>
@@ -98,75 +99,78 @@
                     </audio> 
                 </section> 
             </div>
+            <button class="more">More trending</button>
          </section>
 
-            <button type="button">More trending</button>
+         <section id="playlists">
             <h2>Your Playlists</h2>
 
-            <div class="best">
-                <img src="../images/best-of-2020-cover.png" alt="fire">
-                <h3>Best of 2020</h3>
-                <p>The music that got you through the lock down.</p>
-            </div>
+            <div class="scrolltwo">
+                <div class="best">
+                    <img src="../images/best-of-2020-cover.png" alt="fire">
+                    <h3>Best of 2020</h3>
+                    <p>The music that got you through the lock down.</p>
+                </div>
 
-            <div class="pumpkin">
-                <img src="../images/pumpkin-spice-cover.png" alt="coffee">
-                <h3>Pumpkin Spice</h3>
-                <p>Creamy and spicy, just like your favorite autumnal latte.</p>
-            </div>
+                <div class="pumpkin">
+                    <img src="../images/pumpkin-spice-cover.png" alt="coffee">
+                    <h3>Pumpkin Spice</h3>
+                    <p>Creamy and spicy, just like your favorite autumnal latte.</p>
+                </div>
 
-            <div class="storm">
-                <img src="../images/quiet-storm-cover.png" alt="storm">
-                <h3>Quiet Storm</h3>
-                <p>Slow tempos and relaxed rhythms.</p>
-            </div>
+                <div class="storm">
+                    <img src="../images/quiet-storm-cover.png" alt="storm">
+                    <h3>Quiet Storm</h3>
+                    <p>Slow tempos and relaxed rhythms.</p>
+                </div>
 
-            <div class="jazz">
-                <img src="../images/smooth-jazz-cover.png" alt="jazz">
-                <h3>Smooth Jazz</h3>
-                <p>The pioneers of smooth jazz</p>
-            </div>
+                <div class="jazz">
+                    <img src="../images/smooth-jazz-cover.png" alt="jazz">
+                    <h3>Smooth Jazz</h3>
+                    <p>The pioneers of smooth jazz</p>
+                </div>
 
-            <div class="study">
-                <img src="../images/smooth-study-cover.png" alt="study">
-                <h3>Study</h3>
-                <p>music to keep you going while you study.</p>
-            </div>
-
-            <button type="button">All Your Playlists</button>
-            <h2>Curated Playlists</h2>
-            
-            <div class="boozy">
-                <img src="../images/boozy-brunch-cover.png" alt="brunch">
-                <h3>Boozy Brunch</h3>
-                <p>up the afternoon with these energetic hits.</p>
-            </div>
-
-            <div class="dinner">
-                <img src="../images/dinner-party-cover.png" alt="dinner">
-                <h3>Dinner Party</h3>
-                <p>Background music to give your party life, but allow your guests to chat.</p>
-            </div>
-
-            <div class="mellow">
-                <img src="../images/mellow-cover.png" alt="mellow">
-                <h3>Mellow</h3>
-                <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
-            </div>
-
-            <div class="chill">
-                <img src="../images/jazz-chill-cover.png" alt="chill">
-                <h3>Jazz and Chill</h3>
-                <p>Set the mood with these silky sounds.</p>
-            </div>
-
-             <div class="saxaphone">
-                <img src="../images/smooth-saxophone-cover.png" alt="saxaphone">
-                <h3>Jazz Saxophone</h3>
-                <p>The greatest collection of your sax favorites.</p>
+                <div class="study">
+                    <img src="../images/smooth-study-cover.png" alt="study">
+                    <h3>Study</h3>
+                    <p>music to keep you going while you study.</p>
+                </div>
              </div>
 
-            <button type="button">More curated</button>
+            <button class="all">All Your Playlists</button>
+            <h2>Curated Playlists</h2>
+            <div class="scrollthree">
+                <div class="boozy">
+                    <img src="../images/boozy-brunch-cover.png" alt="brunch">
+                    <h3>Boozy Brunch</h3>
+                    <p>up the afternoon with these energetic hits.</p>
+                </div>
+
+                <div class="dinner">
+                    <img src="../images/dinner-party-cover.png" alt="dinner">
+                    <h3>Dinner Party</h3>
+                    <p>Background music to give your party life, but allow your guests to chat.</p>
+                </div>
+
+                <div class="mellow">
+                    <img src="../images/mellow-cover.png" alt="mellow">
+                    <h3>Mellow</h3>
+                    <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
+                </div>
+
+                <div class="chill">
+                    <img src="../images/jazz-chill-cover.png" alt="chill">
+                    <h3>Jazz and Chill</h3>
+                    <p>Set the mood with these silky sounds.</p>
+                </div>
+
+                <div class="saxaphone">
+                    <img src="../images/smooth-saxophone-cover.png" alt="saxaphone">
+                    <h3>Jazz Saxophone</h3>
+                    <p>The greatest collection of your sax favorites.</p>
+                </div>
+            </div>
+            <button class="curated">More curated</button>
         </section>
 
     </main>
