--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="checkbox" id="dropdown">
         <label for="dropdown"><span></span></label>
         <ul>
-        <li><a href="#home">MuzakMaker</a></li>
+        <li><a href="#home" class="title">MuzakMaker</a></li>
         <li><a href="#trending">Trending <br>Songs</a></li>
         <li><a href="#playlists">Your <br>Playlists</a></li>
         <li><a href="#curated">Curated <br>Playlists</a></li>
@@ -99,9 +99,9 @@
                     </audio> 
                 </section> 
             </div>
-            <button class="more">More trending</button>
+            <a class="more" href="#more">More trending</a>
          </section>
-
+   
          <section id="playlists">
             <h2>Your Playlists</h2>
 
@@ -136,8 +136,9 @@
                     <p>music to keep you going while you study.</p>
                 </div>
              </div>
-
-            <button class="all">All Your Playlists</button>
+         </section>
+            <a class="all" href="#allyourplaylists">All Your Playlists</a>
+        <section id="curated">
             <h2>Curated Playlists</h2>
             <div class="scrollthree">
                 <div class="boozy">
@@ -170,12 +171,14 @@
                     <p>The greatest collection of your sax favorites.</p>
                 </div>
             </div>
-            <button class="curated">More curated</button>
         </section>
+    
+            <a class="curated" href="#more">More curated</a>
+    
 
     </main>
     <footer>
-        <p>Copyright 2022 Smooth Jazz</p>
+        <p>&copy;2022 Smooth Jazz</p>
     </footer>
 </body>
 </html>
