--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <a class="more" href="#more">More trending</a>
          </section>
-   
+   <section class="allplaylists">
          <section id="playlists">
             <h2>Your Playlists</h2>
 
@@ -172,9 +172,9 @@
                 </div>
             </div>
         </section>
-    
+  
             <a class="curated" href="#more">More curated</a>
-    
+   </section>
 
     </main>
     <footer>
