--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#trending">Trending <br>Songs</a></li>
         <li><a href="#playlists">Your <br>Playlists</a></li>
         <li><a href="#curated">Curated <br>Playlists</a></li>
-        <li><a href="user"><img src="../images/duke-silver.png" alt="user profile picture"></a></li>
+        <li><a href="user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
         </ul>
     </nav>
     <main>
@@ -36,9 +36,9 @@
                             <dd>Cali</dd>
                         </dl>
                     </div>
-                        <img src="../images/aloma-cover.png" alt="bird flying">
+                        <img src="images/aloma-cover.png" alt="bird flying">
                         <audio controls>
-                            <source src="../audio/aloma.mp3">
+                            <source src="audio/aloma.mp3">
                         </audio>                 
                 </section>
 
@@ -50,9 +50,9 @@
                             <dd> Nesterouk</dd>
                         </dl>
                     </div>
-                        <img src="../images/my-road-cover.png" alt="road">
+                        <img src="images/my-road-cover.png" alt="road">
                         <audio controls>
-                            <source src="../audio/my-road.mp3">
+                            <source src="audio/my-road.mp3">
                         </audio>
                 </section>
 
@@ -64,9 +64,9 @@
                             <dd>Dredstudio</dd>
                         </dl>
                    </div>
-                        <img src="../images/papaya-cover.png" alt="papaya">
+                        <img src="images/papaya-cover.png" alt="papaya">
                         <audio controls>
-                            <source src="../audio/papaya.mp3">
+                            <source src="audio/papaya.mp3">
                         </audio> 
                 </section>
 
@@ -78,9 +78,9 @@
                         <dd>Black Rhomb</dd>
                         </dl>
                     </div>
-                    <img src="../images/smoothies-cover.png" alt="smoothies">
+                    <img src="images/smoothies-cover.png" alt="smoothies">
                     <audio controls>
-                        <source src="../audio/smoothies.mp3">
+                        <source src="audio/smoothies.mp3">
                     </audio>
                 </section>
                
@@ -93,45 +93,45 @@
                             <dd>Ricky Bombino</dd>
                         </dl>
                     </div>
-                    <img src="../images/successful-performance-cover.png" alt="performance">
+                    <img src="images/successful-performance-cover.png" alt="performance">
                     <audio controls>
-                        <source src="../audio/successful-performance.mp3">
+                        <source src="audio/successful-performance.mp3">
                     </audio> 
                 </section> 
             </div>
             <a class="more" href="#more">More trending</a>
          </section>
-   <section class="allplaylists">
+   
          <section id="playlists">
             <h2>Your Playlists</h2>
 
             <div class="scrolltwo">
                 <div class="best">
-                    <img src="../images/best-of-2020-cover.png" alt="fire">
+                    <img src="images/best-of-2020-cover.png" alt="fire">
                     <h3>Best of 2020</h3>
                     <p>The music that got you through the lock down.</p>
                 </div>
 
                 <div class="pumpkin">
-                    <img src="../images/pumpkin-spice-cover.png" alt="coffee">
+                    <img src="images/pumpkin-spice-cover.png" alt="coffee">
                     <h3>Pumpkin Spice</h3>
                     <p>Creamy and spicy, just like your favorite autumnal latte.</p>
                 </div>
 
                 <div class="storm">
-                    <img src="../images/quiet-storm-cover.png" alt="storm">
+                    <img src="images/quiet-storm-cover.png" alt="storm">
                     <h3>Quiet Storm</h3>
                     <p>Slow tempos and relaxed rhythms.</p>
                 </div>
 
                 <div class="jazz">
-                    <img src="../images/smooth-jazz-cover.png" alt="jazz">
+                    <img src="images/smooth-jazz-cover.png" alt="jazz">
                     <h3>Smooth Jazz</h3>
                     <p>The pioneers of smooth jazz</p>
                 </div>
 
                 <div class="study">
-                    <img src="../images/smooth-study-cover.png" alt="study">
+                    <img src="images/smooth-study-cover.png" alt="study">
                     <h3>Study</h3>
                     <p>music to keep you going while you study.</p>
                 </div>
@@ -142,31 +142,31 @@
             <h2>Curated Playlists</h2>
             <div class="scrollthree">
                 <div class="boozy">
-                    <img src="../images/boozy-brunch-cover.png" alt="brunch">
+                    <img src="images/boozy-brunch-cover.png" alt="brunch">
                     <h3>Boozy Brunch</h3>
                     <p>up the afternoon with these energetic hits.</p>
                 </div>
 
                 <div class="dinner">
-                    <img src="../images/dinner-party-cover.png" alt="dinner">
+                    <img src="images/dinner-party-cover.png" alt="dinner">
                     <h3>Dinner Party</h3>
                     <p>Background music to give your party life, but allow your guests to chat.</p>
                 </div>
 
                 <div class="mellow">
-                    <img src="../images/mellow-cover.png" alt="mellow">
+                    <img src="images/mellow-cover.png" alt="mellow">
                     <h3>Mellow</h3>
                     <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
                 </div>
 
                 <div class="chill">
-                    <img src="../images/jazz-chill-cover.png" alt="chill">
+                    <img src="images/jazz-chill-cover.png" alt="chill">
                     <h3>Jazz and Chill</h3>
                     <p>Set the mood with these silky sounds.</p>
                 </div>
 
                 <div class="saxaphone">
-                    <img src="../images/smooth-saxophone-cover.png" alt="saxaphone">
+                    <img src="images/smooth-saxophone-cover.png" alt="saxaphone">
                     <h3>Jazz Saxophone</h3>
                     <p>The greatest collection of your sax favorites.</p>
                 </div>
@@ -174,7 +174,7 @@
         </section>
   
             <a class="curated" href="#more">More curated</a>
-   </section>
+  
 
     </main>
     <footer>
